DB Connection stuff

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine On
 RewriteBase /
+Redirect 404 / http://www.google.com
+ErrorDocument 404 /index.php
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.+)$ windex.php [QSA,L]
+RewriteRule ^testprep/(.+)$ /index.php [QSA,L]
